<resources>
    <string name="app_name">EatersLab</string>
    <string name="search_map_title">Find your canteen</string>
    <string name="select_action_title">Select your action</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EatersLab System</string>
    <string name="nav_header_subtitle">For better eating experience</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Your place</string>
    <string name="menu_gallery">Statistics</string>
    <string name="menu_slideshow">Menu</string>

    <string name="home_second">Home Second</string>
    <string name="image_came_intent">image from camera intent</string>

    <string name="occupancy">Relative occupancy</string>
    <string name="find_on_map">Find on map</string>
    <string name="search_in_list">Search in list</string>
    <string name="choose_action">What would you like to do?</string>
    <string name="select">Select</string>
    <string name="info_image">Info image</string>

    <string name="food_image">food image</string>
    <string name="cafeteria_image">cafeteria image</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="main_prefs" translatable="false">main_preferences</string>
    <string name="style_prefs" translatable="false">style_preferences</string>
    <string name="version_prefs" translatable="false">version_preferences</string>
    <string name="main_header">Main</string>
    <string name="theme_header">Interface</string>
    <string name="version_header">App version</string>
    <string name="language_title">Application interface language</string>
    <string name="theme_title">Use dark app theme</string>
    <string name="lang" translatable="false">lang</string>
    <string name="dark_theme">theme</string>

    <string name="no_gps_notification">Problem with GPS. It may be turned off.</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="noday">Error</string>
    <string name="wait_connection">Waiting for connection</string>
    <string name="cafeteria_logo">Cafeteria logo</string>
    <string name="enjoy_your_meal">Enjoy\nyour meal! </string>
    <string name="your_place">Your place</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="no_data">no data</string>
    <string name="key">key</string>
    <string name="value">value</string>
    <string name="key_format" translatable="false">%s: </string>
    <string name="load_placeholder">loading…</string>
    <string name="subdescription">More info</string>
    <string name="expand">expand</string>
    <string name="connection_lost">Connection lost…</string>
    <string name="data_fetch_error">Error when fetching data from server!</string>
    <string name="connection_restored">Connection restored</string>
    <string name="relative_occupancy">Relative occupancy</string>
    <string name="opening_hours">Opening hours</string>
    <string name="open_from">From</string>
    <string name="open_to">To</string>

    <string name="time_from_to_format">Opened from %s to %s</string>
    <string name="search_your_place">Search your place</string>
    <string name="opened_now">Opened now</string>
    <string name="min_average_rating">Min average rating</string>
    <string name="opened_from">Opened from</string>
    <string name="opened_to">Opened to</string>
    <string name="time_not_selected">Pick time</string>
    <string name="vegeterian_options">Vegeterian options</string>
    <string name="occupancy_stats">Occupancy stats [%]</string>
    <string name="average_review_stats">Average review stats</string>
    <string name="anonymous">Anonymous</string>
    <string name="username">Set your review username</string>
    <string name="your_review">Your review</string>
    <string name="your_review_body">Write your review</string>
    <string name="send_review">Send</string>
</resources>
