<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/main_header"
        app:iconSpaceReserved="false"
        app:key="@string/main_prefs">

        <ListPreference
            app:iconSpaceReserved="false"
            app:defaultValue="@string/default_lang"
            app:entries="@array/lang_entries"
            app:entryValues="@array/lang_values"
            app:key="@string/lang"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/anonymous"
            app:title="@string/username"
            app:iconSpaceReserved="false"
            app:key="@string/username"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/theme_header"
        app:iconSpaceReserved="false"
        app:key="@string/style_prefs">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/dark_theme"
            app:title="@string/theme_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/version_header"
        app:iconSpaceReserved="false"
        app:key="@string/version_prefs">

        <Preference
            android:title="@string/versionName"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>
