<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/dataGroupNav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_menu_place"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/navStats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/navMenu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <group
        android:id="@+id/settingsGroupNav"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
