<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navHome">

    <fragment
        android:id="@+id/navHome"
        android:name="labs.pooh.eaterslab.ui.fragment.home.CafeteriaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navStats"
        android:name="labs.pooh.eaterslab.ui.fragment.stats.StatsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navMenu"
        android:name="labs.pooh.eaterslab.ui.fragment.menu.MenuFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_menu" />

    <activity
        android:id="@+id/navSettings"
        android:name="labs.pooh.eaterslab.ui.activity.settings.SettingsActivity"
        android:label="@string/action_settings"
        tools:layout="@layout/activity_settings"/>
</navigation>
