<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyValueRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.view.KeyValueTextView">

        <TextView
            android:id="@+id/keyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key"
            android:fontFamily="@font/alegreya_sc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/valueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/key_value_margin"
            android:fontFamily="@font/alegreya_sc_bold"
            android:text="@string/value"
            app:layout_constraintStart_toEndOf="@id/keyText"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/expandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/keyText"
            app:layout_constraintDimensionRatio="1:1"
            android:contentDescription="@string/expand"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/valueTextExpanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value"
            android:fontFamily="@font/alegreya_sc"
            android:layout_marginStart="@dimen/expanded_margin"
            android:layout_marginTop="@dimen/expanded_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keyText"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>