<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainHelloLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelloSelectActivity">

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="@dimen/icon_big"
        android:layout_height="@dimen/icon_big"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/main_icon_padding"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintBottom_toTopOf="@id/textViewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
        app:srcCompat="@drawable/ic_format_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
        app:srcCompat="@drawable/ic_map" />

    <TextView
        android:id="@+id/textViewSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/search_in_list"
        app:layout_constraintEnd_toEndOf="@+id/fabSearch"
        app:layout_constraintStart_toStartOf="@+id/fabSearch"
        app:layout_constraintTop_toBottomOf="@+id/fabSearch" />

    <TextView
        android:id="@+id/textViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/find_on_map"
        app:layout_constraintEnd_toEndOf="@+id/fabMap"
        app:layout_constraintStart_toStartOf="@+id/fabMap"
        app:layout_constraintTop_toBottomOf="@+id/fabMap" />

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="@dimen/hello_message_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_action"
        android:textSize="@dimen/hello_message_size"
        android:textStyle="italic"
        android:lineSpacingExtra="@dimen/hello_line_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
